--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: '3.4'
+version: '3.9'
 
 services:
   intelitradermvc:
-    image: ${DOCKER_REGISTRY-}intelitraderapi
     build:
-      context: .
-      dockerfile: .
+      context: ./IntelitraderAPI
+      dockerfile: Dockerfile
     ports:
-      - "5001:5001"
+      - "8001:80"
     depends_on:
       - sqldata
 
@@ -16,6 +15,7 @@ services:
     environment:
       - SA_PASSWORD=senai@132
       - ACCEPT_EULA=Y
+      - MSSQL_PID=Express
     volumes:
       - c:\dados\volumes\mssql:/var/opt/mssql/data
     ports:
