--- a/IntelitraderAPI/IntelitraderAPI.csproj
+++ b/IntelitraderAPI/IntelitraderAPI.csproj
@@ -24,6 +24,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 	<PropertyGroup>
