--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,7 @@ services:
       - SA_PASSWORD=senai@132
       - ACCEPT_EULA=Y
       - MSSQL_PID=Express
+    volumes:
+      - c:\dados\volumes\mssql:/var/opt/mssql/data      
     ports:
       - "1450:1433"
